Correcciones para server

--- a/src/app/actividad-detalle/actividad-detalle.component.html
+++ b/src/app/actividad-detalle/actividad-detalle.component.html
@@ -5,9 +5,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dashboard General</title>
-  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
-  <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
+
   <!-- Bootstrap core JavaScript-->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -85,7 +83,7 @@
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="btn btn-success"  (click)="onSubmitInicio(FechaInicioEditform.value)" style="margin-left: 70%;">Actualizar
+                                <button class="btn btn-success"  (click)="onSubmitInicio()" style="margin-left: 70%;">Actualizar
                                 </button>
                               </div>
                             </div>
@@ -112,7 +110,7 @@
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="btn btn-success"  (click)="onSubmitFin(FechaFinEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                                <button class="btn btn-success"  (click)="onSubmitFin()" style="margin-left: 70%;">Actualizar</button>
                               </div>
                             </div>
                           </li>
@@ -142,7 +140,7 @@
                             </form>
                           </div>
                           <div class="col-2">
-                            <button class="btn btn-success"  (click)="onSubmitMaterial(MaterialEditform.value)" style="margin-left: 70%;">Actualizar
+                            <button class="btn btn-success"  (click)="onSubmitMaterial()" style="margin-left: 70%;">Actualizar
                             </button>
                           </div>
                         </div>
@@ -173,7 +171,7 @@
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="btn btn-success"  (click)="onSubmitTiempo(TiempoEditform.value)" style="margin-left: 70%;">Actualizar
+                                <button class="btn btn-success"  (click)="onSubmitTiempo()" style="margin-left: 70%;">Actualizar
                                 </button>
                               </div>
                             </div>
@@ -210,7 +208,7 @@
                             </form>
                           </div>
                           <div class="col-2">
-                            <button class="btn btn-success"  (click)="onSubmitCosto(CostoEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                            <button class="btn btn-success"  (click)="onSubmitCosto()" style="margin-left: 70%;">Actualizar</button>
                           </div>
                         </div>
                       </li>
