--- a/src/app/cliente-detalle/cliente-detalle.component.html
+++ b/src/app/cliente-detalle/cliente-detalle.component.html
@@ -5,9 +5,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dashboard General</title>
-  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
-  <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
+
   <!-- Bootstrap core JavaScript-->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -63,7 +61,7 @@
                             </form>
                           </div>
                           <div class="col-2">
-                            <button class="btn btn-success"   (click)="onSubmitEmail(EmailEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                            <button class="btn btn-success"   (click)="onSubmitEmail()" style="margin-left: 70%;">Actualizar</button>
                           </div>
                         </div>
                       </li>
@@ -90,7 +88,7 @@
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="btn btn-success"   (click)="onSubmitTelefono(TelefonoEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                                <button class="btn btn-success"   (click)="onSubmitTelefono()" style="margin-left: 70%;">Actualizar</button>
                               </div>
                             </div>
                           </li>
@@ -114,7 +112,7 @@
                                 </form>
                               </div>
                               <div class="col-2">
-                                <button class="btn btn-success"   (click)="onSubmitCelular(CelularEditform.value)" style="margin-left: 70%;">Actualizar</button>
+                                <button class="btn btn-success"   (click)="onSubmitCelular()" style="margin-left: 70%;">Actualizar</button>
                               </div>
                             </div>
                           </li>
@@ -165,7 +163,7 @@
                         </form>
                         <br>
                         <div class="row">
-                          <button class="btn btn-success"   (click)="onSubmitDireccion(DireccionEditform.value)" style="margin-left: 70%;">Actualizar
+                          <button class="btn btn-success"   (click)="onSubmitDireccion()" style="margin-left: 70%;">Actualizar
                           </button>
                         </div>
                       </li>
