--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,6 +1,6 @@
 
 .page{
-  background-image: url("/assets/img/background3.jpg");
+  background-image: url("src/assets/img/background3.jpg");
   position: absolute;
   top: 0;
   left: 0;
