--- a/src/app/orden-trabajo/orden-trabajo.component.html
+++ b/src/app/orden-trabajo/orden-trabajo.component.html
@@ -5,9 +5,6 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Dashboard General</title>
-  <link href="../assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
-  <link href="../assets/css/sb-admin-2.min.css" rel="stylesheet">
   <!-- Bootstrap core JavaScript-->
   <script src="../assets/vendor/jquery/jquery.min.js"></script>
   <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -292,16 +289,16 @@
               </div>
               
               <div class="col-12" *ngIf="!estadoCliente && !OTform.valid" style="padding-top: 5%; padding-left: 60%; padding-bottom:5%;">
-                <button type="button" (click)="SubmitOTCliente(OTform.value)" disabled style="align-content: right" class="btn btn-success">Guardar</button>
+                <button type="button" (click)="SubmitOTCliente()" disabled style="align-content: right" class="btn btn-success">Guardar</button>
               </div>
               <div class="col-12" *ngIf="!estadoCliente && OTform.valid" style="padding-top: 5%; padding-left: 60%; padding-bottom:5%;">
-                <button type="button" (click)="SubmitOTCliente(OTform.value)" style="align-content: right" class="btn btn-success">Guardar</button>
+                <button type="button" (click)="SubmitOTCliente()" style="align-content: right" class="btn btn-success">Guardar</button>
               </div>
               <div class="col-12" *ngIf="estadoCliente && Clienteform.valid" style="padding-top: 5%; padding-left: 60%; padding-bottom:5%;">
-                <button type="button" (click)="SubmitCliente(OTform.value, Clienteform.value)"  style="align-content: right" class="btn btn-success">Guardar</button>
+                <button type="button" (click)="SubmitCliente()"  style="align-content: right" class="btn btn-success">Guardar</button>
               </div>
               <div class="col-12" *ngIf="estadoCliente && !Clienteform.valid" style="padding-top: 5%; padding-left: 60%; padding-bottom:5%;">
-                <button type="button" disabled (click)="SubmitCliente(OTform.value, Clienteform.value)"  style="align-content: right" class="btn btn-success">Guardar</button>
+                <button type="button" disabled (click)="SubmitCliente()"  style="align-content: right" class="btn btn-success">Guardar</button>
               </div>
            </div>
          </section>
