--- a/src/app/orden-trabajo/orden-trabajo.component.scss
+++ b/src/app/orden-trabajo/orden-trabajo.component.scss
@@ -3,7 +3,7 @@ body, html {
 }
 
 .page{
-  	background-image: url("/assets/img/background3.jpg");
+  	background-image: url("src/assets/img/background3.jpg");
   	position: absolute;
   	top: 0;
   	left: 0;
