--- a/src/app/userforgetpass/userforgetpass.component.scss
+++ b/src/app/userforgetpass/userforgetpass.component.scss
@@ -4,7 +4,7 @@ body, html {
 
 
 .page{
-  background-image: url("/assets/img/background3.jpg");
+  background-image: url("src/assets/img/background3.jpg");
   position: absolute;
   top: 0;
   left: 0;
